--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Mock Rotten Tomatoes web app created with Rails as Lighthouse Labs course work.
 
-Things you may want to cover:
+Implemented ActionMailer to email users when deleted by admin.
+Users can add a movie, upload photo, and search.
+Implemented Admin accounts.
+Implemented pagination with Kaminari gem.
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+'rails', '4.0.0'
+sqlite3 as the database for Active Record
+'bcrypt' gem to encrypt passwords
