--- a/README.rdoc
+++ b/README.rdoc
@@ -7,6 +7,6 @@ Users can add a movie, upload photo, and search.
 Implemented Admin accounts.
 Implemented pagination with Kaminari gem.
 
-'rails', '4.0.0'
-sqlite3 as the database for Active Record
-'bcrypt' gem to encrypt passwords
+'rails', '4.0.0'.
+sqlite3 as the database for Active Record.
+'bcrypt' gem to encrypt passwords.
